@@ -4,10 +4,13 @@ import com.jixiao2.server.employee.EmployeeLookupService;
 import com.jixiao2.server.employee.EmployeeLookupService.EmployeeRow;
 import com.jixiao2.server.menu.MenuPermissionService;
 import com.jixiao2.server.security.SessionTokenCodec;
+import com.jixiao2.server.web.SessionCookieSupport;
 import java.time.Duration;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import org.springframework.http.ResponseCookie;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
@@ -16,59 +19,57 @@ import org.springframework.web.bind.annotation.RestController;
 @RestController
 public class LocalAuthController {
 
-  static final String SESSION_COOKIE = "jx_session";
   private static final Duration SESSION_MAX_AGE = Duration.ofDays(7);
 
   private final SessionTokenCodec sessionTokenCodec;
   private final EmployeeLookupService employees;
   private final MenuPermissionService menuPermissionService;
-  private final org.springframework.core.env.Environment environment;
+  private final SessionCookieSupport sessionCookieSupport;
 
   public LocalAuthController(
       SessionTokenCodec sessionTokenCodec,
       EmployeeLookupService employees,
       MenuPermissionService menuPermissionService,
-      org.springframework.core.env.Environment environment) {
+      SessionCookieSupport sessionCookieSupport) {
     this.sessionTokenCodec = sessionTokenCodec;
     this.employees = employees;
     this.menuPermissionService = menuPermissionService;
-    this.environment = environment;
+    this.sessionCookieSupport = sessionCookieSupport;
   }
 
   @PostMapping("/auth/password/login")
   public ResponseEntity<Map<String, Object>> passwordLogin(
       @RequestBody Map<String, String> body) {
     if (!sessionTokenCodec.hasSecret()) {
-      return ResponseEntity.ok(
-          Map.of("success", false, "message", "未配置 SESSION_JWT_SECRET，无法签发会话"));
+      Map<String, Object> err = new LinkedHashMap<String, Object>();
+      err.put("success", Boolean.FALSE);
+      err.put("message", "未配置 SESSION_JWT_SECRET，无法签发会话");
+      return ResponseEntity.ok(err);
     }
-    String username = body.getOrDefault("username", "");
-    String password = body.getOrDefault("password", "");
+    String username = body.containsKey("username") ? body.get("username") : "";
+    String password = body.containsKey("password") ? body.get("password") : "";
     employees.assertPassword(password);
     EmployeeRow row = employees.resolveByUsername(username);
     String display = employees.displayName(row, username.trim());
-    List<String> roles = menuPermissionService.getRoleKeysForUser(row.employeeId());
+    List<String> roles = menuPermissionService.getRoleKeysForUser(row.getEmployeeId());
     if (roles.isEmpty()) {
-      roles = List.of("employee");
+      roles = new ArrayList<String>(Arrays.asList("employee"));
     } else {
-      roles = List.copyOf(roles);
+      roles = new ArrayList<String>(roles);
     }
-    String cookieVal = sessionTokenCodec.sign(row.employeeId(), display, roles, null);
+    String cookieVal = sessionTokenCodec.sign(row.getEmployeeId(), display, roles, null);
     if (cookieVal == null) {
-      return ResponseEntity.ok(
-          Map.of("success", false, "message", "未配置 SESSION_JWT_SECRET，无法签发会话"));
+      Map<String, Object> err = new LinkedHashMap<String, Object>();
+      err.put("success", Boolean.FALSE);
+      err.put("message", "未配置 SESSION_JWT_SECRET，无法签发会话");
+      return ResponseEntity.ok(err);
     }
-    boolean prod =
-        java.util.Arrays.asList(environment.getActiveProfiles()).contains("prod")
-            || java.util.Arrays.asList(environment.getActiveProfiles()).contains("production");
-    ResponseCookie cookie =
-        ResponseCookie.from(SESSION_COOKIE, cookieVal)
-            .httpOnly(true)
-            .sameSite("Lax")
-            .path("/")
-            .maxAge(SESSION_MAX_AGE)
-            .secure(prod)
-            .build();
-    return ResponseEntity.ok().header("Set-Cookie", cookie.toString()).body(Map.of("success", true));
+    Map<String, Object> ok = new LinkedHashMap<String, Object>();
+    ok.put("success", Boolean.TRUE);
+    return ResponseEntity.ok()
+        .header(
+            "Set-Cookie",
+            sessionCookieSupport.sessionCookie(cookieVal, SESSION_MAX_AGE).toString())
+        .body(ok);
   }
 }
